Fix deprecated URL(String) constructor usage
Replaced deprecated URL(String) constructor with URI.toURL() pattern
as recommended in JEP 418. This provides better URL parsing and validation.

Changed in RemoteExecutor.java:
- executeHead(): new URI(urlString).toURL()
- executeGet(): new URI(urlString).toURL()
- executeJSONGet(): new URI(urlString).toURL()

Added import for java.net.URI